--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-MONGODB_URI =mongodb+srv://oa6vi6:nvg6xc@cluster0.ebz5v.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://oa6vi6:nvg6xc@cluster0.ebz5v.mongodb.net/?retryWrites=true&w=majority
 # create one using openssl rand -base64 32
-JWT_TOKEN = 
+
 # gemini api key
-NEXT_PUBLIC_GEMINI_API_KEY = 
+
 # self host anime api url from  https://github.com/consumet/api.consumet.org
-NEXT_PUBLIC_ANIME_API_URL =https://vercel.com/ansh-mishras-projects/aniwatch-apidont-delete
-NEXT_PUBLIC_STREAM_API =https://vercel.com/ansh-mishras-projects/aniwatch-apidont-delete 
-NEXT_PUBLIC_EMAIL_SERVICE = gmail
+NEXT_PUBLIC_ANIME_API_URL=https://vercel.com/ansh-mishras-projects/aniwatch-apidont-delete
+NEXT_PUBLIC_STREAM_API=https://vercel.com/ansh-mishras-projects/aniwatch-apidont-delete 
+
 # email address
-NEXT_PUBLIC_EMAIL = 
+ 
 # since this project utilises nodemailer use app password found inside google account
-NEXT_PUBLIC_EMAIL_PASSWORD = 
+
 # use website public domain in production or localhost in dev
-NEXT_PUBLIC_DOMAIN = http:/localhost:3000
+NEXT_PUBLIC_DOMAIN=https://anime-trix.vercel.app/
